--- a/css/style.css
+++ b/css/style.css
@@ -1,169 +1,190 @@
-/*
-Project Name: Relaxr
-Client: GA Syd
-Author: Yan Zhao 
-Developer @GA in NYC
-*/
+Body  {
+    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    background-color: #f0efef;
 
-
-.home-pg {
-    background: url(../images/header_bg.jpg) no-repeat center center fixed; 
-    background-size: cover;
-}
-
-body {
-    font-family: 'Open Sans';
-}
-
-h1 {
-     color:white;
-     padding-left: 100px;
-     font-size: 48px;
-     font-weight:800;
-}
-
-h2 {
-    color: white;
-    margin-top: 150px;
-    text-align: center;
-    font-size: 48px;
-    font-weight: 400;        
-}
-
-.button {
-    display: block;
-    color: #033048;
-    background-color: #f9e42e;
-    font-size: 28px;
-    font-weight: bold;
-    text-align: center;
-    text-decoration: none;
-    width:200px;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 300px;
-    border: 2px;
-    border-color: none;
-    border-radius: 5px;
 }
 
 .container {
-    background: #f0efef;
-    font-family: Open Sans;
-    font-size: 26px;
-    font-weight: 300;
-    padding-bottom: 100px;
-    padding-top: 80px;
+    width:960px;
+    margin: auto;
 }
 
-h3 {
+header {
+    height: 100px;
+    background: #033048;
+          
+}
+
+h1  {
+    float:left;
+    font-weight: 800;
+    color: white;
+    padding-top: 0px;
+    padding-bottom: 20px;
+    width: 300px;
+    
+    
+}
+
+h2  {
     font-size: 40px;
     font-weight: 600;
     color: #033048;
-    padding-left:100px;
-}
-
-p {
-    padding-left: 100px;
-}
-
-.benefits {
-    padding-left: 200px;
-}
-
-.container1 {
-    background: url(../images/testimonial_bg.jpg);
-    background-size: cover;
-    height: 400px;
-}
-
-.quote {
-    color:white;
-    margin: auto;
-    width: 50%;
-    padding-top: 150px;
-    text-align: center;
-    font-family: Open Sans;
-    font-size: 26px;
-    font-style: italic;
-    font-weight: 300; 
-}
-.quote span  {
-    color:white;
-    margin:auto;
-    padding-top: 150px;
-    width: 50%;
-    text-align: center;
-    font-family: Open Sans;
-    font-size: 26px;
-    font-style: normal;
-    font-weight: 600; 
-}
-
-.container2 {
-    background: #f9e42e;
-    background-size: cover;
-    padding:35px 0;
-}
-
-.button2 {
-    display: block;
-    color:white;
-    background-color: #033048;
-    font-family: open sans;
-    font-weight: 800;
-    text-decoration: none;
-    text-align: center;
-    width:240px;
-    height: auto;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 24px;
-    border-radius:5px; 
-}
-
-.container3 {
-    background: #121212;
-    height: 600px;
-    background-size:cover;
-    padding-top: 45px;
-}
-.container3 .Relaxr2 {
-    font-family: open sans;
-    font-size: 48px;
-    font-weight: 800;
-    color: #f9e42e;
-    text-align: center;
-    padding-bottom: 60px;
-    padding-top: 60px;
     
 }
-.container3 .socialmedia {
-    margin: auto;
-    width:150px;
+
+h3  {
+    font-size: 32px;
+    font-weight:800;
+    color: #033048;
+    
 }
 
-.container3 .socialmedia .twitter {
-    float: left;
-    margin: auto;
+p  {
+    font-size: 24px;
+    font-weight: 300;
+    margin-bottom:40px;
+
 }
-.container3 .socialmedia .facebook {
+
+.firstcharacter {
+    font-size: 72px;
+    color: #606161;
+    display: block;
+    float: left;  
+    line-height: 60px; 
+    padding-right: 8px; 
+    padding-left: 3px;
+    font-weight:400;
+}
+
+.leftColumn article a {
+    font-size: 24px;
+    font-weight: 600;
+    color: #033048;
+    float:right;
+
+}
+
+hr {
+    margin-top: 150px;
+}
+
+
+
+nav.top {
+    text-align: right;
+    float:right; 
+    padding-top: 30px;     
+    
+}
+       
+
+nav.top a {
+    font-weight: 600;
+    font-size:24px;
+    color: #f9e42e;
+    padding-left: 20px;
+    text-decoration: none; 
+}
+    
+
+.leftColumn {
+    float:left;
+    width: 700px;
+    padding-bottom: 100px;
+    
+}
+
+.rightColumn {
+    float:right;
+    width: 240px;
+    padding: 0;
+    
+}
+
+
+.categories a {
+    font-size:24px;
+    font-weight: 300px;
+    color: #033048;
+    display: block;
+    text-decoration: none;
+    
+}
+
+.rightColumn .about p {
+    font-size:22px;
+    font-weight: 600px;
+    color:#033048;
+
+}
+
+.rightColumn .about a {
+    font-size:22px;
+    font-weight: 600;
     float: right;
-    margin: auto;
-    padding-bottom: 200px;
 }
-.container3 footer {
+
+.rightColumn aside img {
+    width:240px;
+    margin-top: 80px;
+
+}
+
+.bottom {
     clear:both;
-    color: white;
-    width: auto;
+    background: #f9e42e;
+    padding-bottom: 50px;
+    padding-top: 50px;
     text-align: center;
+        
+}
+
+.button {
+    color: white;
+    background: #033048;
+    font-size: 24px;
+    padding: 15px 90px 15px 90px;
+    border-radius: 5px;
+    font-weight: 800;
+    text-decoration: none; 
+}
+    
+
+footer {
+    text-align: center;
+    background: #121212;
+    margin-top: 0px;
+
+}
+
+.logo {
+    color: #f9e42e;
+    font-size: 48px;
+    font-weight: 800;
+    padding-top: 200px;
+    padding-bottom: 20px;
+    margin-top: 0px;
+}
+footer ul {
+    margin: 0;
+    padding:0;   
+}
+footer ul li {
+    display: inline-block;
+    padding-left: auto;
+    padding-right: auto;
+    width: 50px;
 }
 
 
+    
 
 
+
+    
+    
+    
+
+    
